--- a/cw-react/public/index.html
+++ b/cw-react/public/index.html
@@ -21,7 +21,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>CeruleanWhisper - Pub (React Part)</title>
+    <title>CeruleanWhisper - Pub (React Part) ver.0.0.1</title>
 <!-- For GitHub Pages' - redirect script to make it correctly work with client-side routing: -->
     <script type="text/javascript">(function(l) { if (l.search) { var q = {}; l.search.slice(1).split('&').forEach(function(v) { var a = v.split('='); q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&'); }); if (q.p !== undefined) { window.history.replaceState(null, null, l.pathname.slice(0, -1) + (q.p || '') + (q.q ? ('?' + q.q) : '') + l.hash); } } }(window.location))</script>
   </head>
